# price-alerts

./: .env.example  README.md  constants.py  db.py  main.py  models.py  pyproject.toml  scrapper.py
.github/workflows/: scrape_job.yml
scripts/: products.py
utils/: number.py
